# taskmate

./: .pre-commit-config.yaml  LICENCE.txt  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: ci-linting.yml  ci-test-pr.yml  linting.yml  python-publish.yml
src/taskmate/: models.py  storage.py
src/taskmate/tui/: edit.py  main.py  task_app.py  taskapp.tcss  taskwidget.py
src/tasks/: storage.py
src/tasks/cli/: commads.py  main.py
src/tasks/tui/: edit.py  main.py  taskapp.tcss  taskwidget.py
tests/unit/: test_config.py  test_storage.py  test_tui.py
