[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmate"
version = "0.1.1"
readme = "README.md"
authors = [{ name = "Magnus Sommarsjö" }]
description = "Simple TUI for task management"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
requires-python = ">=3.10"
dependencies = ["textual", "typing-extensions>=4.0"]

[project.optional-dependencies]
lint = ["ruff~=0.6.3"]
test = ["pytest", "pytest-asyncio"]
dev = ["pre-commit", "taskmate[lint,test]", "tox>=4.0", "textual-dev"]

[project.urls]
"Homepage" = "https://github.com/magnussommarsjo/taskmate"
"Bug Tracker" = "https://github.com/magnussommarsjo/taskmate/issues"

[project.scripts]
tm = "taskmate.tui.main:main"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
